--- a/msi/app/src/main/AndroidManifest.xml
+++ b/msi/app/src/main/AndroidManifest.xml
@@ -9,6 +9,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+        <activity android:name=".OptionsDatabase"></activity>
         <activity
             android:name=".Login"
             android:label="登录" />
